--- a/src/Component/Carusel.module.css
+++ b/src/Component/Carusel.module.css
@@ -1,15 +1,20 @@
 
 
 .carusel {
-    width: 60%;
+    width: 70%;
     margin: 0 auto;
+}
+
+.best {
+    text-align: center;
+    font-size: 20px;
 }
 
 .card {
     border : 1px solid #fff;
     border-radius: 8px;
     overflow: hidden;
-    height: 40vh;
+    height: 100%;
     width: 100%;
 
 }
@@ -17,8 +22,8 @@
 .cardtop > img {
     height: 100%;
     width: 100%;
-    max-width: 300px;
-    max-height: 250px;
+    /*max-width: 300px;
+    max-height: 250px;*/
 }
 
 .cardtop h1 {
@@ -36,15 +41,15 @@
 
 @media screen and (max-width : 500px) {
     .carusel {
-        width: 45%;
+        width: 50%;
         margin: 0 auto;
     }
 
     .cardtop > img {
         height: 100%;
         width: 100%;
-        max-width: 200px;
-        max-height: 200px;
+        max-width: 300px;
+        max-height: 250px;
     }
     .card {
         border : 1px solid #fff;
@@ -52,7 +57,9 @@
         overflow: hidden;
         height: 45vh;
         width: 100%;
-    
+    }
+    .pcweek {
+        display: none;
     }
     
 }
