--- a/src/Component/Carusel.module.css
+++ b/src/Component/Carusel.module.css
@@ -26,7 +26,12 @@
     max-height: 250px;*/
 }
 
-.cardtop h1 {
+.cardtop p {
+    font-size: 1rem;
+    text-align: center;
+}
+
+.cardtop h3 {
     font-size: 1rem;
     text-align: center;
 }
@@ -55,7 +60,7 @@
         border : 1px solid #fff;
         border-radius: 8px;
         overflow: hidden;
-        height: 45vh;
+        height: 50vh;
         width: 100%;
     }
     .pcweek {
