--- a/src/Component/Carusel.module.css
+++ b/src/Component/Carusel.module.css
@@ -16,6 +16,7 @@
     overflow: hidden;
     height: 100%;
     width: 100%;
+    margin: 0;
 
 }
 
@@ -35,16 +36,6 @@
     font-size: 1rem;
     text-align: center;
 }
-
-.slick-slide {
-    margin: 0 27px;
-}
-
-/* the parent */
-.slick-list {
-    margin: 0 -27px;
-}
-
 
 
 @media screen and (max-width : 500px) {
