--- a/src/Component/Category.module.css
+++ b/src/Component/Category.module.css
@@ -15,6 +15,11 @@
     font-size : 12px;
 }
 
+.textlink {
+    color: inherit;
+    text-decoration: inherit;
+}
+
 @media screen and (max-width : 500px) { /* 모바일 화면에서는 카테고리가 안보이도록 none 처리*/
     .category {
         display: none;
