--- a/src/Component/Home.module.css
+++ b/src/Component/Home.module.css
@@ -6,3 +6,98 @@
 .home {
     text-align: center;
 }
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px 20px;
+    margin-left: 18%;
+    margin-right: 1%;
+    width: 100%;
+    height: 100%;
+    max-width: 1200px;
+}
+
+.button {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-right: 33%;
+}
+
+.button button {
+    background-color: black;
+    color: white;
+    width: 33%;
+}
+
+
+.images img {
+    width: 100%;
+    height: 100%;
+    max-width: 1200px;
+}
+
+.fonts p:nth-child(2) {
+    font-size: 13px;
+}
+
+.fonts p:nth-child(3) {
+    font-size: 11px;
+}
+
+.fonts p:nth-child(5), p:nth-child(6), p:nth-child(7) {
+    font-size: 13px;
+}
+
+/*.review {
+    margin-left: 18%;
+    margin-right: 2%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.review button {
+    height: 20px;
+    margin-right : 10px;
+}
+
+
+
+.tables {
+    width: 100%;
+    max-width: 1220px;
+    margin-left: 18%;
+    margin-right : 1%;
+}
+*/
+@media screen and (max-width : 500px) {
+
+    .container {
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: 20px 20px;
+        margin : 5%;
+        width: 100%;
+        height: 100%;
+        row-gap: 20%;
+    }
+
+    .images img {
+        width: 100%;
+        height: 100%;
+        max-width: 430px;
+    }
+    .images {
+        grid-row: 1;
+    }
+
+    .fonts {
+        grid-row: 2;
+    }
+
+    
+    
+    
+}
