--- a/src/Component/List.module.css
+++ b/src/Component/List.module.css
@@ -34,6 +34,11 @@
     text-align: center;
 }
 
+.textlink {
+    color: inherit;
+    text-decoration: inherit;
+}
+
 @media screen and (max-width : 500px) {
 
     .shop {
