--- a/src/Component/Nav.module.css
+++ b/src/Component/Nav.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     position: sticky; /* 스크롤 내려도 유지되게끔 sticky로 선언 */
+    top : 0;
 }
 
 .list2 {
@@ -33,7 +34,7 @@
         display: flex;
         margin-left : 12px;
         border : none;
-        background-color: white;
+        background: none;
         align-items: center;
     }
     
