--- a/src/Component/Carusel.module.css
+++ b/src/Component/Carusel.module.css
@@ -1,13 +1,21 @@
 
 
 .carusel {
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
 }
 
 .best {
     text-align: center;
     font-size: 20px;
+    margin : 0;
+}
+
+.body {
+    margin: 0;
+    padding: 0;
+    width: 80%;
+    height: 100%;
 }
 
 .card {
@@ -16,7 +24,9 @@
     overflow: hidden;
     height: 100%;
     width: 100%;
-    margin: 0;
+    /*max-width: 300px;
+    max-height: 200px;
+    margin: 0;*/
 
 }
 
@@ -44,8 +54,9 @@
 
 
 @media screen and (max-width : 500px) {
+
     .carusel {
-        width: 50%;
+        width: 80%;
         margin: 0 auto;
     }
 
@@ -53,13 +64,13 @@
         height: 100%;
         width: 100%;
         max-width: 300px;
-        max-height: 250px;
+        max-height: 1000px;
     }
     .card {
         border : 1px solid #fff;
         border-radius: 8px;
         overflow: hidden;
-        height: 50vh;
+        height: 100%;
         width: 100%;
     }
     .pcweek {
