--- a/src/Component/Category.module.css
+++ b/src/Component/Category.module.css
@@ -1,13 +1,19 @@
 .category {
     display: flex;
     flex-direction: column;
-    position : absolute;
+    position : sticky;
+    top : 7%;
+    margin-left: 1%;
+    height: 100%;
+    flex-basis: 10%;
 }
 
 .categorys {
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: sticky;
+    top : 7%;
+    margin-left: 1%;
 }
 
 .item {
@@ -21,7 +27,7 @@
 }
 
 @media screen and (max-width : 500px) { /* 모바일 화면에서는 카테고리가 안보이도록 none 처리*/
-    .category {
+    /*.category {
         display: none;
-    }
+    }*/
 }
