--- a/src/Component/Home.module.css
+++ b/src/Component/Home.module.css
@@ -3,6 +3,11 @@
     padding : 0; /* 마진과 패딩의 여백을 없애줌 */
 }
 
+.sort {
+    display: flex;
+    justify-content: space-between;
+}
+
 .home {
     text-align: center;
 }
@@ -11,11 +16,12 @@
     display: grid;
     grid-template-columns: repeat(2,1fr);
     gap: 20px 20px;
-    margin-left: 18%;
-    margin-right: 1%;
+    margin-left: 1%;
+    margin-right: 3%;
     width: 100%;
     height: 100%;
     max-width: 1200px;
+    flex-basis: 80%;
 }
 
 .button {
