--- a/src/Component/Home.module.css
+++ b/src/Component/Home.module.css
@@ -87,7 +87,7 @@
         margin : 5%;
         width: 100%;
         height: 100%;
-        row-gap: 20%;
+        row-gap: 100px;
     }
 
     .images img {
