2022 08 05 모바일 버전 CSS  UX 변경 (왼쪽 상단 카테고리 제거)

--- a/src/Component/Cart.module.css
+++ b/src/Component/Cart.module.css
@@ -96,3 +96,13 @@ tfoot td {
     background: black;
     color: white;
 }
+
+@media screen and (max-width : 500px) {
+
+    .cart {
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    
+}
