--- a/src/Component/Home.module.css
+++ b/src/Component/Home.module.css
@@ -84,7 +84,7 @@
         display: grid;
         grid-template-columns: repeat(1,1fr);
         gap: 20px 20px;
-        margin : 5%;
+        margin-left : 5%;
         width: 100%;
         height: 100%;
         row-gap: 100px;
