--- a/src/Component/Home.module.css
+++ b/src/Component/Home.module.css
@@ -56,28 +56,7 @@
     font-size: 13px;
 }
 
-/*.review {
-    margin-left: 18%;
-    margin-right: 2%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.review button {
-    height: 20px;
-    margin-right : 10px;
-}
-
-
-
-.tables {
-    width: 100%;
-    max-width: 1220px;
-    margin-left: 18%;
-    margin-right : 1%;
-}
-*/
+  
 @media screen and (max-width : 500px) {
 
     .container {
@@ -101,6 +80,10 @@
 
     .fonts {
         grid-row: 2;
+    }
+
+    .mobile {
+        margin-left: 10%;
     }
 
     
