--- a/src/Component/Login.module.css
+++ b/src/Component/Login.module.css
@@ -70,6 +70,7 @@
     .logincontainer h2 {
         width: 300px;
         text-align: center;
+        margin-left: 10px;
     }
 
     .logincontainer {
