--- a/src/Component/List.module.css
+++ b/src/Component/List.module.css
@@ -11,6 +11,19 @@
     /*top : 10%;*/
 }
 
+.pagenation {
+    display: flex;
+    justify-content: center;
+}
+
+.buttons {
+    border: none;
+    background-color: white;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+
 .card {
     border : 1px solid #fff;
     border-radius: 8px;
