--- a/src/Component/Nav.module.css
+++ b/src/Component/Nav.module.css
@@ -1,10 +1,61 @@
 .nav {
     display: flex;
     justify-content: space-between;
-    position: sticky; /* 스크롤 내려도 유지되게끔 sticky로 선언 */
+    /*position: sticky;*/ /* 스크롤 내려도 유지되게끔 sticky로 선언 */
+    /*top : 0;*/
+}
+
+.nav2 {
+    position: sticky;
     top : 0;
     z-index: 999;
 }
+
+.slidemenu {
+    position: absolute;
+    width: 100%;
+    height: 30vh;
+    background-color: white;
+    z-index: 1000;
+    overflow: hidden;
+}
+
+.logout {
+    border: none;
+    background: none;
+    font-size: 15px;
+    width: 100%;
+}
+
+.logout:hover {
+    transform: translateY(-3px);
+    cursor: pointer;
+}
+
+.list1 .item:hover {
+    transform: translateY(-3px);
+}
+
+.list2 .items:nth-child(1):hover {
+    transform: translateY(-3px);
+}
+
+.list2 .items:nth-child(3):hover {
+    transform: translateY(-3px);
+}
+
+.list2 .items:nth-child(4):hover {
+    transform: translateY(-3px);
+}
+.list2 .items:nth-child(5):hover {
+    transform: translateY(-3px);
+}
+.list2 .items:nth-child(6):hover {
+    transform: translateY(-3px);
+}
+
+
+
 
 .list2 {
     display: flex;
@@ -38,6 +89,14 @@
         border : none;
         background: none;
         align-items: center;
+    }
+
+    .item {
+        margin : 20px 10px;
+    }
+    
+    .items {
+        margin : 20px 10px;
     }
     
 }
