background size 변경 (contain)

--- a/src/Component/Carusel2.module.css
+++ b/src/Component/Carusel2.module.css
@@ -13,7 +13,7 @@
     width: 100%;
     height: 100vh;
     animation: animate 16s ease-in-out infinite;
-    background-size: cover;
+    background-size: contain;
 }
 
 .details {
